// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Long thread 1`] = `
<div
  class="w-1/3 m-auto h-400px"
>
  <div
    class="discussion s-vwbhBuhy0jW4"
  >
    <div
      class="messages s-vwbhBuhy0jW4"
    >
      <span
        class="from s-vwbhBuhy0jW4"
      >
        Fernand Naudin
      </span>
      <span
        class="message s-vwbhBuhy0jW4"
      >
        Qu'est-ce qui se passe encore ?
      </span>
      <span
        class="from s-vwbhBuhy0jW4"
      >
        Maître Folage
      </span>
      <span
        class="message s-vwbhBuhy0jW4"
      >
        Notre ami va se faire un plaisir de vous l'expliquer.
      </span>
      <span
        class="from s-vwbhBuhy0jW4"
      >
        Pascal
      </span>
      <span
        class="message s-vwbhBuhy0jW4"
      >
        Les Volfoni ont organisé à la péniche une petite réunion des cadres, façon meeting, si vous voyez ce que je veux dire.
M'enfin quoi, on parle dans votre dos.
      </span>
      <span
        class="from s-vwbhBuhy0jW4"
      >
        Fernand Naudin
      </span>
      <span
        class="message s-vwbhBuhy0jW4"
      >
        Et tu tiens ça d'où ?
      </span>
      <span
        class="from s-vwbhBuhy0jW4"
      >
        Pascal
      </span>
      <span
        class="message s-vwbhBuhy0jW4"
      >
        Je ne peux pas le dire, j'ai promis. Ce serait mal.
      </span>
      <span
        class="from s-vwbhBuhy0jW4"
      >
        Fernand Naudin
      </span>
      <span
        class="message s-vwbhBuhy0jW4"
      >
        Alors ?
      </span>
      <span
        class="from s-vwbhBuhy0jW4"
      >
        Maître Folage
      </span>
      <span
        class="message s-vwbhBuhy0jW4"
      >
        Eh bien. Euh. Y'a deux solutions : ou on se dérange, ou on méprise. 
Oui, évidemment, n'importe comment une tournée d'inspection peut jamais nuire, bien sûr.
      </span>
      <span
        class="from s-vwbhBuhy0jW4"
      >
        Fernand Naudin
      </span>
      <span
        class="message s-vwbhBuhy0jW4"
      >
        Bon, on va y aller, hmm ?
      </span>
      <span
        class="from s-vwbhBuhy0jW4"
      >
        Pascal
      </span>
      <span
        class="message s-vwbhBuhy0jW4"
      >
        Monsieur Fernand, y'a peut-être une place pour moi dans votre auto. Des fois que la réunion devienne houleuse ... J'ai une présence tranquillisante.
      </span>
    </div>
     
    <form
      class="s-vwbhBuhy0jW4"
    >
      <fieldset
        class="s-Fe6WNbR-55zp"
      >
         
        <input
          class="s-Fe6WNbR-55zp"
        />
      </fieldset>
      <!--&lt;Input&gt;-->
       
      <button
        class="s-NMyTiX1zi6rz"
        disabled=""
        title="Envoyer à tous"
        type="submit"
      >
        <span
          class="material-icons s-NMyTiX1zi6rz"
        >
          send
        </span>
        
        
        
      </button>
      <!--&lt;Button&gt;-->
    </form>
  </div>
  <!--&lt;Discussion&gt;-->
</div>
`;

exports[`short thread 1`] = `
<div
  class="discussion s-vwbhBuhy0jW4"
>
  <div
    class="messages s-vwbhBuhy0jW4"
  >
    <span
      class="from s-vwbhBuhy0jW4"
    >
      Pascal
    </span>
    <span
      class="message s-vwbhBuhy0jW4"
    >
      Aww yeah!!
    </span>
  </div>
   
  <form
    class="s-vwbhBuhy0jW4"
  >
    <fieldset
      class="s-Fe6WNbR-55zp"
    >
       
      <input
        class="s-Fe6WNbR-55zp"
      />
    </fieldset>
    <!--&lt;Input&gt;-->
     
    <button
      class="s-NMyTiX1zi6rz"
      disabled=""
      title="Envoyer à tous"
      type="submit"
    >
      <span
        class="material-icons s-NMyTiX1zi6rz"
      >
        send
      </span>
      
      
      
    </button>
    <!--&lt;Button&gt;-->
  </form>
</div>
`;
